--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+
+**/*.zip
+**/.svn
+.project
+.pydevproject
+.settings
+test_data/TMP_DarwinCore
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
