--- a/dwca_config/eml_metadata/eml_smhi_datacenter.yaml
+++ b/dwca_config/eml_metadata/eml_smhi_datacenter.yaml
@@ -53,5 +53,14 @@ dataset:
 
     distribution: 
         online:
-            url: http://sharkdata.se/
+            url: 
+                - http://sharkdata.se
+                - https://sharkweb.smhi.se
+
+    intellectualRights:
+        para:
+            This work is licensed under 
+            CC0 1.0 Universal (CC0 1.0) Public Domain Dedication, 
+            https://creativecommons.org/publicdomain/zero/1.0/
+            
 
