--- a/dwca_config/eml_metadata/eml_smhi_datacenter.yaml
+++ b/dwca_config/eml_metadata/eml_smhi_datacenter.yaml
@@ -1,14 +1,8 @@
 
-# 
-# A part of the DarwinCore-Archive, DwC-A, generator.
-# GitHub: ...
-# Contact: shark@smhi.se
 
-info: 
-    title: eml_smhi_datacenter.yaml
-    description:
-        Used to generate DarwinCore-Archive files from 
-        SHARK zip files.
+# A part of the DarwinCore-Archive, DwC-A, generator.
+# GitHub: https://github.com/sharkdata/darwincore
+# Contact: shark@smhi.se
 
 dataset: 
 
