--- a/dwca_config/dwca_bacterioplankton_nat.yaml
+++ b/dwca_config/dwca_bacterioplankton_nat.yaml
@@ -1,6 +1,6 @@
-# 
+
 # A part of the DarwinCore-Archive, DwC-A, generator.
-# GitHub: ...
+# GitHub: https://github.com/sharkdata/darwincore
 # Contact: shark@smhi.se
 
 info: 
