--- a/dwca_config/field_mapping/dwca_terms_occurrence.yaml
+++ b/dwca_config/field_mapping/dwca_terms_occurrence.yaml
@@ -34,7 +34,7 @@ dwcaOccurrenceColumns:
     - dynamicProperties
 
 dwcaOccurrenceContent:
-    -   eventType: sample
+    -   eventType: occurrence
         dwcTerms:
             # id: 
             eventID:
