--- a/dwca_config/eml_metadata/eml_smhi_datacenter.yaml
+++ b/dwca_config/eml_metadata/eml_smhi_datacenter.yaml
@@ -52,8 +52,7 @@ dataset:
 
     intellectualRights:
         para:
-            This work is licensed under 
-            CC0 1.0 Universal (CC0 1.0) Public Domain Dedication, 
-            https://creativecommons.org/publicdomain/zero/1.0/
-            
+            REPLACE-intellectualRights
+
+
 
